[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "tqueue"
description = "Threading Queue"
license = {text = "MIT License"}
keywords = ["queue","threading"]
requires-python = ">=3.7"
authors = [
    { name = "Hai Cao", email = "cthai83@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]
dependencies = []
dynamic = ["readme", "version"]

[project.optional-dependencies]
test = [
  "pytest >=6.0",
]
[project.urls]
Homepage = "https://github.com/haiz/tqueue"
Documentation = "https://tqueue.readthedocs.io/"
Changelog = "https://github.com/haiz/tqueue/main/CHANGELOG.md"
Source = "https://github.com/haiz/tqueue"

[tool.hatch.version]
path = "src/tqueue/__version__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src/tqueue",
    "/CHANGELOG.md",
    "/README.md",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = "\n## Release Information\n\n"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "CHANGELOG.md"
pattern = "\n(###.+?\n)## "

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = "\n---\n\n[Full changelog](https://github.com/haiz/tqueue/blob/main/CHANGELOG.md)\n"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = 'src="(docs/img/.*?)"'
replacement = 'src="https://raw.githubusercontent.com/haiz/tqueue/main/\1"'

# https://beta.ruff.rs/docs/configuration/#using-rufftoml
[tool.ruff]
select = ["E", "F", "I", "B", "PIE"]
ignore = ["B904", "B028"]
line-length = 120

[tool.ruff.isort]
combine-as-imports = true

[tool.mypy]
ignore_missing_imports = true
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-rxXs"
filterwarnings = [
  "error",
  "ignore: If the number of threads is to hight, it will raise issue of computer resources"
]
markers = [
  "copied_from(source, changes=None): mark test as copied from somewhere else, along with a description of changes made to accodomate e.g. our test setup",
]

[tool.coverage.run]
omit = ["venv/*", "tqueue/_compat.py"]
include = ["tqueue/*", "tests/*"]